# Triton-100-Days-Challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmark/: bench_conv1d.py  bench_layer_norm.py  bench_matrix_add.py  bench_matrix_conv2d.py  bench_matrix_transpose.py  bench_matrix_vector_mul.py  bench_online_softmax.py  bench_prefix_sum.py  bench_relu.py  bench_safe_softmax.py  bench_softmax.py  bench_vector_add.py  bench_vector_conv1d.py  conftest.py
tests/: test_conv1d.py  test_layer_norm.py  test_matrix_add.py  test_matrix_conv2d.py  test_matrix_transpose.py  test_matrix_vector_mul.py  test_online_softmax.py  test_prefix_sum.py  test_relu.py  test_safe_softmax.py  test_softmax.py  test_vector_add.py  test_vector_conv1d.py
triton_kernels/day001/: vector_add.py
triton_kernels/day002/: matrix_add.py
triton_kernels/day003/: matrix_vector_mul.py
triton_kernels/day004/: prefix_sum.py
triton_kernels/day005/: layer_norm.py
triton_kernels/day006/: matrix_transpose.py
triton_kernels/day007/: conv1d.py  vector_conv1d.py
triton_kernels/day008/: matrix_conv2d.py
triton_kernels/day009/: safe_softmax.py  softmax.py
triton_kernels/day010/: relu.py
triton_kernels/day011/: online_softmax.py
