[project]
name = "triton_challenge"
version = "0.1.0"
description = "100 days of triton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "triton==3.6.0",
    "torch==2.10.0",
    "pytest==9.0.2",
    "numpy<2.0.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

# The config you were thinking of:
[tool.setuptools.packages.find]
include = ["triton_kernels*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest]
addopts = ["--verbose", "-s"]
testpaths = ["tests"]
